CMS重要参数补充